Completed Bootstrap 5 course

--- a/Bootstrap_5_Fundamentals/background_bits/grid.html
+++ b/Bootstrap_5_Fundamentals/background_bits/grid.html
@@ -12,7 +12,17 @@
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/custom.css" />
+    <!-- <link rel="stylesheet" href="../css/custom.css" /> -->
+    <style>
+      .row {
+        background-color: antiquewhite;
+      }
+      div[class^="col"] {
+        background-color: burlywood;
+        border: red solid 1px;
+        padding: 1rem 0;
+      }
+    </style>
     <title>Grid</title>
   </head>
 
