--- a/Bootstrap_5_Fundamentals/applepie.html
+++ b/Bootstrap_5_Fundamentals/applepie.html
@@ -15,11 +15,6 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/custom.css" />
-    <!-- <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-      crossorigin="anonymous"
-    ></script> -->
   </head>
 
   <body>
@@ -66,8 +61,8 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="order.html"
-                  >Order</a
+                <a class="nav-link" href="contact.html"
+                  >Contact</a
                 >
               </li>
             </ul>
@@ -77,6 +72,15 @@
     </header>
 
     <main role="main">
+      <div
+        class="container-fluid jumbotron jumbotron-detail-apple-pie py-5"
+      >
+        <div class="container">
+          <h1 class="display-3 fw-bold text-white">
+            Apple pie
+          </h1>
+        </div>
+      </div>
       <div class="container">
         <nav class="my-3 ms-3">
           <ol
@@ -101,7 +105,7 @@
             </li>
           </ol>
         </nav>
-        
+
         <h1 class="fw-bolder">
           Apple pie
           <small class="fw-normal fst-italic"
@@ -120,10 +124,10 @@
 
           <div class="col-lg-4 col-sm-6">
             <h3 class="my-3">About this pie</h3>
-            <p class="lead">
+            <p class="lead text-center">
               Increase your apple pie intake
             </p>
-            <p>
+            <p class="user-select-none">
               Sweet ice cream jelly beans lemon drops.
               Pastry toffee fruitcake gingerbread jelly-o.
               Lollipop sesame snaps muffin. Macaroon halvah
@@ -148,9 +152,12 @@
                 <a
                   type="button"
                   href="shoppingbasket.html"
-                  class="btn btn-success float-end"
+                  class="btn btn-success float-right"
+                  data-bs-toggle="offcanvas"
+                  data-bs-target="#shoppingCart"
+                  aria-controls="shoppingCart"
                 >
-                  Add to basket
+                  Add to cart
                 </a>
               </div>
             </div>
@@ -163,7 +170,7 @@
           <h4>A quote from Bethany</h4>
           <p class="mb-0 fst-italic">
             My recipes have been in our family for
-            generations.We hope you enjoy our pies! -
+            generations. We hope you enjoy our pies! -
             Bethany
           </p>
         </div>
@@ -240,6 +247,246 @@
           </div>
         </div>
       </div>
+
+      <div
+        class="offcanvas offcanvas-start shopping-cart-offcanvas"
+        data-bs-scroll="true"
+        tabindex="-1"
+        id="shoppingCart"
+        aria-labelledby="shoppingCartLabel"
+      >
+        <div class="offcanvas-header">
+          <h5
+            class="offcanvas-title"
+            id="shoppingCartLabel"
+          >
+            Your shopping cart
+          </h5>
+          <button
+            type="button"
+            class="btn-close text-reset"
+            data-bs-dismiss="offcanvas"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="offcanvas-body">
+          <div class="table-responsive">
+            <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th>Pie Name</th>
+                  <th>Quantity</th>
+                  <th class="text-center">Price</th>
+                  <th class="text-center">Total</th>
+                </tr>
+              </thead>
+
+              <tbody>
+                <tr>
+                  <td class="col-sm-8 col-md-6">
+                    <div class="media">
+                      <img
+                        src="images/products/pumpkinpiesmall.jpg"
+                        alt="pumpkin pie"
+                        class="mr-3 thumbnail img-fluid"
+                        width="75"
+                      />
+                      <div class="media-body">
+                        <h5
+                          class="mt-0 media-heading text-primary"
+                        >
+                          Pumpkin pie
+                        </h5>
+                        <span>Status: </span
+                        ><span class="text-success"
+                          ><strong>In Stock</strong></span
+                        >
+                      </div>
+                    </div>
+                  </td>
+                  <td
+                    class="col-sm-1 col-md-1"
+                    style="text-align: center"
+                  >
+                    <input
+                      type="number"
+                      value="2"
+                      id=""
+                      class="form-control"
+                    />
+                  </td>
+                  <td
+                    class="col-sm-1 col-md-1 text-content"
+                  >
+                    <strong>$14.95</strong>
+                  </td>
+                  <td class="col-sm-1 col-md-1 text-center">
+                    <strong>$29.90</strong>
+                  </td>
+                  <td class="col-sm-1 col-md-1">
+                    <button
+                      type="button"
+                      class="btn btn-danger"
+                    >
+                      X
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="col-sm-8 col-md-6">
+                    <div class="media">
+                      <img
+                        class="mr-3 thumbnail"
+                        width="75"
+                        src="images/products/applepiesmall.jpg"
+                        alt="apple pie"
+                      />
+                      <div class="media-body">
+                        <h5
+                          class="mt-0 media-heading text-primary"
+                        >
+                          Apple pie
+                        </h5>
+                        <span>Status: </span
+                        ><span class="text-warning"
+                          ><strong>Last items</strong></span
+                        >
+                      </div>
+                    </div>
+                  </td>
+                  <td
+                    class="col-sm-1 col-md-1"
+                    style="text-align: center"
+                  >
+                    <input
+                      type="number"
+                      class="form-control"
+                      value="1"
+                    />
+                  </td>
+                  <td class="col-sm-1 col-md-1 text-center">
+                    <strong>$14.95</strong>
+                  </td>
+                  <td class="col-sm-1 col-md-1 text-center">
+                    <strong>$14.95</strong>
+                  </td>
+                  <td class="col-sm-1 col-md-1">
+                    <button
+                      type="button"
+                      class="btn btn-danger"
+                    >
+                      X
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td colspan="3" class="text-right">
+                    <h5>Subtotal</h5>
+                  </td>
+                  <td class="text-center">
+                    <h5><strong>$44.85</strong></h5>
+                  </td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td colspan="3" class="text-right">
+                    <h5>Shipping</h5>
+                  </td>
+                  <td class="text-center">
+                    <h5><strong>$10.00</strong></h5>
+                  </td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td colspan="3" class="text-right">
+                    <h3>Total</h3>
+                  </td>
+                  <td class="text-center">
+                    <h3><strong>$54.85</strong></h3>
+                  </td>
+                  <td></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+          <form class="m-1">
+            <div class="input-group">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Promo code"
+              />
+              <div class="input-group-append">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                >
+                  Redeem
+                </button>
+              </div>
+            </div>
+          </form>
+          <a
+            type="button"
+            class="m-1 btn btn-success"
+            href="order.html"
+            >Go to order page</a
+          >
+          <a
+            type="button"
+            class="m-1 btn btn-danger"
+            href=""
+            data-bs-toggle="modal"
+            data-bs-target="#cancelModal"
+            >Clear your shopping cart</a
+          >
+        </div>
+      </div>
+
+      <div
+        class="modal fade"
+        id="cancelModal"
+        tabindex="-1"
+        aria-labelledby="cancelModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">
+                Clear shopping cart
+              </h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              Are you sure you want to clear your cart?
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismis="modal"
+              >
+                Cancel</button
+              ><button type="button" class="btn btn-danger">
+                Yes
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
