--- a/Bootstrap_5_Fundamentals/done.html
+++ b/Bootstrap_5_Fundamentals/done.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0"
+      content="width=device-width, initial-scale=1"
     />
+    <title>Bethany's Pie Shop</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,8 +15,13 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/custom.css" />
-    <title>Document</title>
+    <!-- <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"
+    ></script> -->
   </head>
+
   <body>
     <header>
       <nav
@@ -58,7 +65,7 @@
                   >Pies</a
                 >
               </li>
-              <li class="nav-item">
+             <li class="nav-item">
                 <a class="nav-link" href="contact.html"
                   >Contact</a
                 >
@@ -70,16 +77,6 @@
     </header>
 
     <main role="main">
-      <div
-        class="container-fluid jumbotron jumbotron-seasonal-pies py-5"
-      >
-        <div class="container">
-          <h1 class="display-3 fw-bold text-white">
-            Seasonal pies
-          </h1>
-        </div>
-      </div>
-      
       <div class="container">
         <nav class="my-3 ms-3">
           <ol
@@ -90,71 +87,40 @@
             <li class="breadcrumb-item">
               <a href="/">Home</a>
             </li>
-            <li class="breadcrumb-item">
-              <a href="#">Pies</a>
-            </li>
 
             <li
               class="breadcrumb-item active"
               aria-current="page"
             >
-              Seasonal pies
+              Order placed
             </li>
           </ol>
         </nav>
 
-        <div class="row">
-          <div class="col-md-4">
-            <img
-              src="images/products/christmasapplepiesmallsquare.jpg"
-              wdith="175"
-              height="175"
-            />
-            <h2>Christmas Apple Pie</h2>
-            <p>Happy holidays with this apple pie</p>
-            <p>
-              <a
-                href="applepie.html"
-                class="btn btn-primary"
-                role="button"
-                >View details</a
+        <div class="row gx-5">
+          <div class="col-md-8">
+            <h2>
+              We are getting started on your order.
+              <span class="text-muted"
+                >Just a few more days before your pie
+                arrives!</span
               >
+            </h2>
+            <p class="lead">
+              Marzipan toffee jelly beans lollipop donut.
+              Brownie dessert apple pie pudding gummies
+              tootsie roll tiramisu wafer. Brownie
+              gingerbread chocolate cake chocolate bar
+              brownie. Cake dragée jelly beans pastry donut
+              apple pie cupcake tarte swiss roll.
             </p>
           </div>
           <div class="col-md-4">
             <img
-              src="images/products/cranberrypiesmallsquare.jpg"
-              wdith="175"
-              height="175"
+              src="images/bethanysquare.jpg"
+              alt="image"
+              class="img-fluid"
             />
-            <h2>Cranberry pie</h2>
-            <p>Cristmas favorite</p>
-            <p>
-              <a
-                href="applepie.html"
-                class="btn btn-primary"
-                role="button"
-                >View details</a
-              >
-            </p>
-          </div>
-
-          <div class="col-md-4">
-            <img
-              src="images/products/pumpkinpiesmallsquare.jpg"
-              wdith="175"
-              height="175"
-            />
-            <h2>Pumkin pie</h2>
-            <p>Our Halloween favorite</p>
-            <p>
-              <a
-                href="applepie.html"
-                class="btn btn-primary"
-                role="button"
-                >View details</a
-              >
-            </p>
           </div>
         </div>
       </div>
